--- a/notebook/basics.ipynb
+++ b/notebook/basics.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notes taken while going through the [Intro to Python for Data Science](https://www.datacamp.com/courses/intro-to-python-for-data-science) course at DataCamp."
+    "Some basics of Python."
    ]
   },
   {
@@ -37,16 +37,20 @@
    "source": [
     "## Data types\n",
     "\n",
-    "`int` = interger\n",
-    "`float` = floating point\n",
-    "`str` = string\n",
-    "`bool` = Boolean (True or False)\n",
-    "`list` = list"
+    "See [Built-in Types](https://docs.python.org/3/library/stdtypes.html). Below are some standard types:\n",
+    "\n",
+    "* `int` = interger\n",
+    "* `float` = floating point\n",
+    "* `str` = string\n",
+    "* `bool` = Boolean (True or False)\n",
+    "* `list` = list\n",
+    "* `dict` = dictionary\n",
+    "* `set` = [set](https://docs.python.org/3/library/stdtypes.html#set-types-set-frozenset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,20 +59,22 @@
      "text": [
       "<class 'int'>\n",
       "<class 'float'>\n",
-      "<class 'float'>\n",
       "<class 'str'>\n",
       "<class 'bool'>\n",
-      "<class 'list'>\n"
+      "<class 'list'>\n",
+      "<class 'dict'>\n",
+      "<class 'set'>\n"
      ]
     }
    ],
    "source": [
     "print(type(10))\n",
     "print(type(10.0))\n",
-    "print(type(10/5))\n",
     "print(type(\"ten\"))\n",
     "print(type(False))\n",
-    "print(type([1,2]))"
+    "print(type([1,2]))\n",
+    "print(type({}))\n",
+    "print(type({1, 2}))"
    ]
   },
   {
@@ -139,7 +145,151 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Use the `+` operator to add to a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 10, 11, 12, 13, 14, 15, 16, 17, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = list(range(11, 17))\n",
+    "num = num + [17,18]\n",
+    "num = [9, 10] + num\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two-dimensional lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['g', 'h', 'i']\n",
+      "['g', 'h']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [[\"a\", \"b\", \"c\"],\n",
+    "     [\"d\", \"e\", \"f\"],\n",
+    "     [\"g\", \"h\", \"i\"]]\n",
+    "\n",
+    "print(x[2])\n",
+    "print(x[2][0:2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To copy a list, you need to create a new list or else the assignment points to the same memory location."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 23]\n",
+      "[1, 2, 23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = list(range(1, 4))\n",
+    "y = x\n",
+    "y[2] = 23\n",
+    "\n",
+    "print(x)\n",
+    "\n",
+    "z = list(x)\n",
+    "z[2] = 100\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Packages\n",
+    "\n",
+    "Use `import` to load packages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "print(math.pi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can only import a specific part of a package."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n",
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import pi\n",
+    "\n",
+    "print(pi)\n",
+    "\n",
+    "from math import pi as p\n",
+    "print(p)"
+   ]
   }
  ],
  "metadata": {
