--- a/notebook/basics.ipynb
+++ b/notebook/basics.ipynb
@@ -237,6 +237,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Dictionaries\n",
+    "\n",
+    "Key-value pairs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "dict_keys(['one', 'two', 'three', 'four'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = {\"one\" : 1, \"two\" : 2, \"three\" : 3, \"four\" : 4}\n",
+    "\n",
+    "print(number['one'])\n",
+    "print(number.keys())\n",
+    "\n",
+    "person = {'homer' : {'drink' : 'duff', 'food' : 'donuts'},\n",
+    "          'bart' :  {'drink' : 'squishee', 'food' : 'pizza'}}\n",
+    "\n",
+    "print(person['homer']['drink'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check if key exists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "{'two': 2, 'three': 3, 'four': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'one' in number:\n",
+    "    del(number['one'])\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Packages\n",
     "\n",
     "Use `import` to load packages."
