Loops and control flow

--- a/notebook/basics.ipynb
+++ b/notebook/basics.ipynb
@@ -352,6 +352,128 @@
     "from math import pi as p\n",
     "print(p)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Control flow\n",
+    "\n",
+    "Use `if`, `elif`, and `else`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "\n",
+    "if x == 11:\n",
+    "    print(11)\n",
+    "elif x == 10:\n",
+    "    print(10)\n",
+    "else:\n",
+    "    print(\"Not 10 or 11\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "while x > 0 :\n",
+    "    print(x)\n",
+    "    x = x - 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "A\n",
+      "B\n",
+      "C\n",
+      "D\n",
+      "E\n",
+      "F\n",
+      "index 0: a\n",
+      "index 1: b\n",
+      "index 2: c\n",
+      "index 3: d\n",
+      "index 4: e\n",
+      "index 5: f\n",
+      "one = 1\n",
+      "two = 2\n",
+      "three = 3\n",
+      "four = 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(0,6):\n",
+    "    print(n)\n",
+    "\n",
+    "for c in 'abcdef':\n",
+    "    print(c.upper())\n",
+    "    \n",
+    "# with index\n",
+    "for i, c in enumerate('abcdef') :\n",
+    "    print(\"index \" + str(i) + \": \" + str(c))\n",
+    "    \n",
+    "# with dictionaries\n",
+    "number = {\"one\" : 1, \"two\" : 2, \"three\" : 3, \"four\" : 4}\n",
+    "for key, value in number.items() :\n",
+    "    print(key + \" = \" + str(value))"
+   ]
   }
  ],
  "metadata": {
