--- a/notebook/numpy.ipynb
+++ b/notebook/numpy.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -100,6 +100,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Subsetting using boolean operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False  True False False]\n",
+      "[False False  True False False  True]\n",
+      "[13 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.logical_and(number > 13, number < 15))\n",
+    "print(np.logical_or(number == 13, number > 15))\n",
+    "\n",
+    "print(number[np.logical_or(number == 13, number > 15)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Coercion"
    ]
   },
@@ -141,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -170,6 +199,36 @@
     "print(test3.shape)\n",
     "print(test3[1][1])\n",
     "print(test3[1, 1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looping over n-dimensional arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in np.nditer(test3):\n",
+    "    print(x)"
    ]
   },
   {
