--- a/notebook/basics.ipynb
+++ b/notebook/basics.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,8 @@
       "[11, 12, 13, 14, 15, 16]\n",
       "[11, 12]\n",
       "16\n",
-      "[15, 16]\n"
+      "[15, 16]\n",
+      "range(0, 6)\n"
      ]
     }
    ],
@@ -146,19 +147,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the `+` operator to add to a list."
+    "Use the `+` operator to add to a list or the append method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9, 10, 11, 12, 13, 14, 15, 16, 17, 18]\n"
+      "[9, 10, 11, 12, 13, 14, 15, 16, 17, 18]\n",
+      "[9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
      ]
     }
    ],
@@ -166,6 +168,9 @@
     "num = list(range(11, 17))\n",
     "num = num + [17,18]\n",
     "num = [9, 10] + num\n",
+    "print(num)\n",
+    "\n",
+    "num.append(19)\n",
     "print(num)"
    ]
   },
