--- a/notebook/functions.ipynb
+++ b/notebook/functions.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,6 +61,44 @@
    "source": [
     "g = lambda x: x*2\n",
     "print(g(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 4, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = ['X', 7, 'Y', 4, 3, 'Z']\n",
+    "integers = [q for q in x if type(q) == int]\n",
+    "print(integers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [3, -1, -10, 2, 7]\n",
+    "greater_than_zero = filter(lambda n: (n > 0), x)\n",
+    "print(list(greater_than_zero))"
    ]
   },
   {
