--- a/notebook/numpy.ipynb
+++ b/notebook/numpy.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -282,6 +282,35 @@
     "print(np.median(iris.data[:,0]))\n",
     "print(np.sum(iris.data[:,0]))\n",
     "print(np.corrcoef(iris.data[:,0], iris.data[:,1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random numbers using [numpy.random](https://docs.scipy.org/doc/numpy/reference/routines.random.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00875572949604042\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(1984)\n",
+    "print(np.random.rand())\n",
+    "\n",
+    "# simulate a die\n",
+    "print(np.random.randint(1,7))"
    ]
   }
  ],
