Added more notes

--- a/notebook/numpy.ipynb
+++ b/notebook/numpy.ipynb
@@ -4,14 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NumPy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[NumPy](https://docs.scipy.org/doc/numpy-1.10.0/index.html) is a library for the Python programming language, adding support for large, multi-dimensional arrays and matrices, along with a large collection of high-level mathematical functions to operate on these arrays. The ancestor of NumPy, Numeric, was originally created by Jim Hugunin with contributions from several other developers."
+    "# NumPy\n",
+    "\n",
+    "[NumPy](https://docs.scipy.org/doc/numpy-1.10.0/index.html) is a library for the Python programming language, adding support for large, multi-dimensional arrays and matrices, along with a large collection of high-level mathematical functions to operate on these arrays. The ancestor of NumPy, Numeric, was originally created by Jim Hugunin with contributions from several other developers.\n",
+    "\n",
+    "Python's built-in data structures include (but is not limited to) lists, tuples, sets, and dictionaries.\n",
+    "\n",
+    "Lists:\n",
+    "\n",
+    "* are enclosed in square brackets `[one, two, three]`\n",
+    "* are ordered (and uses an index for access)\n",
+    "* are mutable (you can modify a list after creation)\n",
+    "* are not unique (item duplication is possible)\n",
+    "* can be composed of different data types (strings, integers, etc.)\n",
+    "\n",
+    "NumPy arrays have the same characteristics as lists but arrays:\n",
+    "\n",
+    "* need to be declared and creating an array requires a specific function (e.g. `numpy.array()`)\n",
+    "* can store data more efficiently than lists\n",
+    "* support a large collection of numerical operations\n",
+    "\n",
+    "Data analytics rely heavily on NumPy arrays."
    ]
   },
   {
@@ -19,6 +32,22 @@
    "metadata": {},
    "source": [
     "Use `import` to load NumPy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a NumPy array using `np.array()`."
    ]
   },
   {
@@ -35,10 +64,35 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "number = np.array(list(range(11, 17)))\n",
+    "number = np.array(list(range(1, 11)))\n",
     "print(type(number))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`number` is an array containing ten items."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number"
    ]
   },
   {
@@ -50,57 +104,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[22 24 26 28 30 32]\n",
-      "[22 24 26 28 30 32]\n"
+      "[ 2  4  6  8 10 12 14 16 18 20]\n",
+      "[ 10  20  30  40  50  60  70  80  90 100]\n"
      ]
     }
    ],
    "source": [
-    "print(number * 2)\n",
-    "\n",
-    "print(number + number)"
+    "print(number + number)\n",
+    "print(number * 10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Subsetting"
+    "Access fifth item."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n",
-      "[12 13]\n",
-      "[14 15 16]\n"
+      "5\n"
      ]
     }
    ],
    "source": [
-    "print(number[4])\n",
-    "print(number[1:3])\n",
-    "print(number[number > 13])"
+    "print(number[4])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Subsetting using boolean operators"
+    "Array slice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(number[1:3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Array of booleans."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False,  True,  True,  True,  True,\n",
+       "        True])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number > 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Subset using array of booleans."
    ]
   },
   {
@@ -112,60 +213,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[False False False  True False False]\n",
-      "[False False  True False False  True]\n",
-      "[13 16]\n"
+      "[ 6  7  8  9 10]\n"
      ]
     }
    ],
    "source": [
-    "print(np.logical_and(number > 13, number < 15))\n",
-    "print(np.logical_or(number == 13, number > 15))\n",
-    "\n",
-    "print(number[np.logical_or(number == 13, number > 15)])"
+    "print(number[number > 5])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Coercion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['True' 'string' '1']\n",
-      "<class 'numpy.str_'>\n",
-      "[1 0 1]\n",
-      "<class 'numpy.int64'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "test = np.array([True, \"string\", 1])\n",
-    "\n",
-    "# all types coerced into type string\n",
-    "print(test)\n",
-    "print(type(test[0]))\n",
-    "\n",
-    "# coerced into intergers\n",
-    "test2 = np.array([True, False, 1])\n",
-    "print(test2)\n",
-    "print(type(test2[0]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "N-dimensional arrays"
+    "Using AND with two boolean operators."
    ]
   },
   {
@@ -177,35 +237,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 2 3]\n",
-      " [4 5 6]]\n",
-      "<class 'numpy.ndarray'>\n",
-      "[1 2 3]\n",
-      "[2 5]\n",
-      "(2, 3)\n",
-      "5\n",
-      "5\n"
+      "[False False  True  True  True  True  True False False False]\n"
      ]
     }
    ],
    "source": [
-    "test3 = np.array([[1, 2, 3],\n",
-    "                 [4, 5, 6]])\n",
-    "\n",
-    "print(test3)\n",
-    "print(type(test3))\n",
-    "print(test3[0,:])\n",
-    "print(test3[:,1])\n",
-    "print(test3.shape)\n",
-    "print(test3[1][1])\n",
-    "print(test3[1, 1])"
+    "print(np.logical_and(number > 2, number < 8))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looping over n-dimensional arrays"
+    "Using OR."
    ]
   },
   {
@@ -217,6 +261,287 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[ True  True  True  True False False  True False False False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.logical_or(number == 7, number < 5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Subset using condition above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(number[np.logical_or(number == 7, number < 5)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NumPy arrays with different types are coerced. The example below shows that all types are coerced into strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['True' 'string' '1']\n",
+      "<class 'numpy.str_'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = np.array([True, \"string\", 1])\n",
+    "print(test)\n",
+    "print(type(test[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Booleans and integers are coerced into integers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 1]\n",
+      "<class 'numpy.int64'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "test2 = np.array([True, False, 1])\n",
+    "print(test2)\n",
+    "print(type(test2[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A two dimensional array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "two_d = np.array(\n",
+    "    [\n",
+    "        [1, 2, 3],\n",
+    "        [4, 5, 6]\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(two_d)\n",
+    "print(type(two_d))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Shape of array, e.g. integer vector describing how many dimensions along each axis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(two_d.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Access cell on second row and second column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(two_d[1, 1])\n",
+    "print(two_d[1][1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Access all items on first row."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(two_d[0,:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Access all items on second column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(two_d[:,1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Three dimensional array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 3, 5)\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "three_d = np.array(\n",
+    "    [\n",
+    "        [\n",
+    "            [5, 78, 2, 34, 0],\n",
+    "            [6, 79, 3, 35, 1],\n",
+    "            [7, 80, 4, 36, 2]\n",
+    "        ],\n",
+    "        [\n",
+    "            [5, 78, 2, 34, 0],\n",
+    "            [6, 79, 3, 35, 1],\n",
+    "            [7, 80, 4, 36, 2]\n",
+    "        ],\n",
+    "        [\n",
+    "            [5, 78, 2, 34, 0],\n",
+    "            [6, 79, 3, 35, 1],\n",
+    "            [7, 80, 4, 36, 2]\n",
+    "        ]\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(three_d.shape)\n",
+    "print(three_d.ndim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looping over a two dimensional array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<numpy.nditer object at 0x7f149407adf0>\n",
       "1\n",
       "2\n",
       "3\n",
@@ -227,7 +552,8 @@
     }
    ],
    "source": [
-    "for x in np.nditer(test3):\n",
+    "print(np.nditer(two_d))\n",
+    "for x in np.nditer(two_d):\n",
     "    print(x)"
    ]
   },
@@ -235,65 +561,204 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Basic statistics using the famous iris dataset"
+    "## Iris\n",
+    "\n",
+    "Import iris data using [load_iris](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_iris.html)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'sklearn.utils.Bunch'>\n",
-      "[[5.1 3.5 1.4 0.2]\n",
-      " [4.9 3.  1.4 0.2]\n",
-      " [4.7 3.2 1.3 0.2]\n",
-      " [4.6 3.1 1.5 0.2]\n",
-      " [5.  3.6 1.4 0.2]\n",
-      " [5.4 3.9 1.7 0.4]]\n",
-      "(150, 4)\n",
-      "<class 'numpy.ndarray'>\n",
-      "5.843333333333334\n",
-      "5.8\n",
-      "876.5\n",
-      "[[ 1.         -0.10936925]\n",
-      " [-0.10936925  1.        ]]\n"
+      "<class 'sklearn.utils.Bunch'>\n"
      ]
     }
    ],
    "source": [
     "from sklearn import datasets\n",
     "iris = datasets.load_iris()\n",
-    "print(type(iris))\n",
-    "\n",
-    "# view first few rows\n",
-    "print(iris.data[0:6,])\n",
-    "\n",
-    "# print dimension\n",
-    "print(iris.data.shape)\n",
-    "\n",
-    "# type of column\n",
-    "print(type(iris.data[:,0]))\n",
-    "\n",
-    "print(np.mean(iris.data[:, 0]))\n",
-    "print(np.median(iris.data[:,0]))\n",
-    "print(np.sum(iris.data[:,0]))\n",
-    "print(np.corrcoef(iris.data[:,0], iris.data[:,1]))"
+    "print(type(iris))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Feature names."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sepal length (cm)',\n",
+       " 'sepal width (cm)',\n",
+       " 'petal length (cm)',\n",
+       " 'petal width (cm)']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris.feature_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check out first few rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.1 3.5 1.4 0.2]\n",
+      " [4.9 3.  1.4 0.2]\n",
+      " [4.7 3.2 1.3 0.2]\n",
+      " [4.6 3.1 1.5 0.2]\n",
+      " [5.  3.6 1.4 0.2]\n",
+      " [5.4 3.9 1.7 0.4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(iris.data[0:6,])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print shape and dimension."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(150, 4)\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(iris.data.shape)\n",
+    "print(iris.data.ndim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Column type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(iris.data[:,0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate simple statistics on first column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.843333333333334\n",
+      "5.8\n",
+      "876.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.mean(iris.data[:, 0]))\n",
+    "print(np.median(iris.data[:,0]))\n",
+    "print(np.sum(iris.data[:,0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Correlation of sepal and petal length."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.         0.87175378]\n",
+      " [0.87175378 1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.corrcoef(iris.data[:,0], iris.data[:,2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Etc.\n",
+    "\n",
     "Random numbers using [numpy.random](https://docs.scipy.org/doc/numpy/reference/routines.random.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
